Added a Skills Section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
 						<header class="major">
 							<h2>About me and some of my skills</h2>
 						</header>
-						<p>Hello, I am Jose Alvarez I come from a city in Texas called Del Rio. Most of my passion comes from working with code and seeing what can be created using all the material I have learned to show to my friends and familiy. 
-						I recently graduated in December this past year with a bachelor's degree in computer science. I know how to program in C++ and how to use UE4 (Unreal Engine 4). The one thing that is amazing about being a programmer is working
-						with others to see what your group can accomplish together.</p>
-						<h3>Skills:</h3>
+						<p>
+							Hello, I am Jose Alvarez I come from a city in Texas called Del Rio. Most of my passion comes from working with code and seeing what can be created using all the material I have learned to show to my friends and familiy.
+							I recently graduated in December this past year with a bachelor's degree in computer science. I know how to program in C++ and how to use UE4 (Unreal Engine 4). The one thing that is amazing about being a programmer is working
+							with others to see what your group can accomplish together.<br /><br />
+							<strong>Skills:</strong><br />
+							C++ - UE4 - GitHub
+						</p>
 					</section>
 
 				<!-- Two -->
