--- a/index.html
+++ b/index.html
@@ -36,47 +36,31 @@
 							I recently graduated in December this past year with a bachelor's degree in computer science. I know how to program in C++ and how to use UE4 (Unreal Engine 4). The one thing that is amazing about being a programmer is working
 							with others to see what your group can accomplish together.<br /><br />
 							<strong>Skills:</strong><br />
-							C++ - UE4 - GitHub
+							C++ - UE4 - GitHub - Game Development Process - Team Oriented
 						</p>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>My Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/TicTacToe.png" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>TicTacToe Game</h3>
+								<p>Created this small game using UE4 using C++ & Blueprints.</p>
+								<ul class="actions">
+									<li><a href="https://github.com/Astros257/TicTacToe" class="button">View Code</a></li>
+									<li><a href="https://drive.google.com/file/d/131q4GZYMM0QzxHdYwUG0c1FkifdOsiUO/view?usp=sharing" class="button">Play Game</a></li>
+								</ul>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
+						<h2>Contact me!</h2>
 						<p>Let me know if you would like to get to know more about me and my skills as a Software Engineer</p>
 						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
@@ -107,9 +91,6 @@
 						<li><a href="https://github.com/Astros257" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/jose-alvarez-b6b69b171/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 						<li><a href="https://www.instagram.com/alvarez.97/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
