--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" style="background-color: darkslategrey;">
 
 		<!-- Header -->
 			<header id="header">
@@ -24,7 +24,7 @@
 			</header>
 
 		<!-- Main -->
-			<div id="main">
+			<div id="main" >
 
 				<!-- One -->
 					<section id="one">
@@ -45,7 +45,7 @@
 						<h2>My Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/TicTacToe.png" alt="" /></a>
+								<a class="image fit thumb"><img src="images/thumbs/TicTacToe.png" alt="" /></a>
 								<h3>TicTacToe Game</h3>
 								<p>Created this small game using UE4 using C++ & Blueprints.</p>
 								<ul class="actions">
