Changed some text
Changed the about me and sorted the skills from horizontal to top down. The contact me was also changed

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 							<h2>About me and some of my skills</h2>
 						</header>
 						<p>
-							Hello, I am Jose Alvarez I come from a city in Texas called Del Rio. Most of my passion comes from working with code and seeing what can be created using all the material I have learned to show to my friends and familiy.
-							I recently graduated in December this past year with a bachelor's degree in computer science. I know how to program in C++ and how to use UE4 (Unreal Engine 4). The one thing that is amazing about being a programmer is working
-							with others to see what your group can accomplish together.<br /><br />
+							Hello, I am Jose Alvarez and I'm from Del Rio, Texas! One of my passions in life is working with code and exploring
+							all sorts of creative possibilities for real-world applications. In December of 2019 I received my bachelors degree
+							in Computer Science with a focus on Digital Gaming from The University of Houston - Victoria. I have experience using C++ and
+							Unreal Engine 4 as you can see below. I consider myself to be a great team player and always get excited for an
+							opportunity to collaborate with fellow programmers. <br /><br />
 							<strong>Skills:</strong><br />
-							C++ - UE4 - GitHub - Game Development Process - Team Oriented
+							C++ <br /> UE4 <br /> GitHub <br /> Game Development Process <br /> Team Oriented
 						</p>
 					</section>
 
@@ -58,8 +60,8 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Contact me!</h2>
-						<p>Let me know if you would like to get to know more about me and my skills as a Software Engineer</p>
+						<h2>Contact Me!</h2>
+						<p>If you have any questions or concerns, dont hesitate to reach out to me by email or phone!</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
