--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/programmer.png" alt="" /></a>
 					<h1><strong>I am Jose Alvarez</strong>, a Software Engineer<br />
 					looking for a position in the<br />
 					industry to do what I love.</h1>
