--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
 							Unreal Engine 4 as you can see below. I consider myself to be a great team player and always get excited for an
 							opportunity to collaborate with fellow programmers. <br /><br />
 							<strong>Skills:</strong><br />
-							C++ <br /> UE4 <br /> GitHub <br /> Game Development Process <br /> Team Oriented
+							C++ <br /> 
+							UE4 <br /> 
+							GitHub <br /> 
+							Game Development Process <br /> 
+							Team Oriented <br />
+							<ul class = "actions">
+								<li><a href='assets/Jose Alvarez Resume.docx' class="button">View Resume</a></li>
+							</ul>
+
 						</p>
 					</section>
 
