--- a/index.html
+++ b/index.html
@@ -57,10 +57,22 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a class="image fit thumb"><img src="images/thumbs/TicTacToe.png" alt="" /></a>
 								<h3>TicTacToe Game</h3>
-								<p>Created this small game using UE4 using C++ & Blueprints.</p>
+								<p>Created this small game using UE4 using C++ & Blueprints. You can view my source code by selecting "view code" or you can get a downloadable copy of the game for windows by 
+								selecting the "Playable Windows" button.</p>
 								<ul class="actions">
 									<li><a href="https://github.com/Astros257/TicTacToe" class="button">View Code</a></li>
-									<li><a href="https://drive.google.com/file/d/131q4GZYMM0QzxHdYwUG0c1FkifdOsiUO/view?usp=sharing" class="button">Play Game</a></li>
+									<li><a href="https://drive.google.com/file/d/131q4GZYMM0QzxHdYwUG0c1FkifdOsiUO/view?usp=sharing" class="button">Playable Windows</a></li>
+								</ul>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<iframe frameborder="0" src="https://itch.io/embed/702424?bg_color=5f5f5f&amp;fg_color=ffffff" width="552" height="167"><a href="https://astros257.itch.io/dino-run">Dino Run by Astros257</a></iframe>
+								<h3>DinoRun Game</h3>
+								<p>The idea of this game came from the original chrome dino run game but I use UE4 to make this. You can view my source code by selecting the "View Code" button. The game is playable by either 
+								just clicking on the "play on itch.io" which will be playable in the browser or you can download a playable version of the game for desktops which runs better by selecting the "Playable Windows" button..</p>
+								<ul class="actions">
+
+									<li><a href="https://github.com/Astros257/DINO-Run-Game" class="button">View Code</a></li>
+									<li><a href="https://drive.google.com/file/d/1Vjc7ECJzDoXOEx1ytTwFEZFXEzfoaTVk/view?usp=sharing" class="button">Playable Windows</a></li>
 								</ul>
 							</article>
 						</div>
