--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/programmer.png" alt="" /></a>
-					<h1><strong>I am Jose Alvarez</strong>, a Software Engineer<br />
+					<h1><strong>I am Jose Alvarez</strong>, a Programmer<br />
 					looking for a position in the<br />
 					industry to do what I love.</h1>
 				</div>
