--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
 							opportunity to collaborate with fellow programmers. <br /><br />
 							<strong>Skills:</strong><br />
 							C++ <br /> 
+							JS <br />
+							HTML <br/>
+							Devops <br/>
+							SQL <br/> 
 							UE4 <br /> 
 							GitHub <br /> 
 							Game Development Process <br /> 
 							Team Oriented <br />
 							<ul class = "actions">
-								<li><a href='assets/Jose Alvarez Resume.docx' class="button">View Resume</a></li>
+								<li><a href='assets/Jose Alvarez Resume.docx' class="button">Download Resume</a></li>
 							</ul>
 
 						</p>
